# gpuinfo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cpuinfo.cc  cpuinfo.h  gcpuinfo.cc  gcpuinfo2.cc  ggpuinfo.cc  gpuinfo.cc  gpuinfo.h  utils.cc  utils.h  widgets.cc  widgets.h
